--- a/docs/gpt_manager_actions_configuration.json
+++ b/docs/gpt_manager_actions_configuration.json
@@ -77,6 +77,7 @@
                 "properties": {
                   "id": { "type": "string" },
                   "name": { "type": "string" },
+                  "description": { "type": "string" },
                   "shared_memories": {
                     "type": "array",
                     "items": { "type": "string" }
